K8s/echo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
    - host: echo1.kamal.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                 name: echo1
                 port:
                   number: 80
    - host: echo2.kamal.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                 name: echo2
                 port:
                   number: 80
